# flake8-qgis

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml  release.yml
flake8_qgis/: __init__.py  flake8_qgis.py  qgis_return_methods.json
scripts/: generate_qgis_return_methods.py
tests/: test_flake8_qgis.py  test_generate_qgis_return_methods.py
