[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flake8_qgis"
version = "1.1.0"
authors = [
    { name = "Gispo Ltd.", email = "info@gispo.fi" },
    { name = "OSGeo Suomi", email = "info@osgeo.fi" },
]
maintainers = [{ name = "OSGeo Suomi", email = "info@osgeo.fi" }]

description = "Flake8 plugin for QGIS python plugins."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["flake8", "qgis", "QGIS", "PyQGIS"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Framework :: Flake8",
]
dependencies = [
    "flake8>=7.2",
]

[dependency-groups]
development = [
    "pytest",
    "pytest-cov",
    "pytest-timeout",

    # Linting
    "flake8",
    "flake8-pyproject",
    "mypy",
    "pre-commit",
    "ruff",
]

[tool.uv]
default-groups = ["development"]


[project.entry-points."flake8.extension"]
QGS = "flake8_qgis:Plugin"

[tool.setuptools]
packages = ["flake8_qgis"]

[tool.setuptools.package-data]
"flake8_qgis" = ["py.typed"]

[tool.pytest.ini_options]
doctest_encoding = "utf-8"

[tool.ruff]
line-length = 88
indent-width = 4

target-version = "py39"

lint.select = [
    "ANN", # flake8-annotations
    "ARG", # flake8-unused-arguments
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "C90", # flake8, mccabe
    "E",   # flake8, pycodestyle
    "F",   # flake8, Pyflakes
    "I",   # isort
    "INP", # flake8-no-pep420
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PGH", # pygrep-hooks
    "PL",  # pylint
    "PT",  # flake8-pytest-style
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "T",   # flake8-print
    "ICN", # flake8-import-conventions
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "W",   # flake8, pycodestyle
    "UP",  # pyupgrade
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN001",
    "ANN201",
    "N802",
]

[tool.mypy]
disable_error_code = "misc"
ignore_missing_imports = true
follow_imports = "silent"
show_column_numbers = true
